[gd_scene load_steps=13 format=3 uid="uid://buqu5kila4dke"]

[ext_resource type="Script" path="res://Scenes/Items/Item_Pick_up/Item_Pick_Up.gd" id="1_xit30"]
[ext_resource type="AudioStream" uid="uid://c6d6ugqsu5qif" path="res://Art/Audio/item_pickup.wav" id="2_lm6wa"]
[ext_resource type="Texture2D" uid="uid://coonj0jbe1vf" path="res://Art/Characters/Player/Shadow.png" id="2_nbybi"]
[ext_resource type="Texture2D" uid="uid://dmk5b4ig0w5cm" path="res://Art/Items/PickUp/items.png" id="3_uyrg3"]
[ext_resource type="PackedScene" uid="uid://c064xhq6au0sf" path="res://Scenes/Over_Lap/Persistence_Data_Handler/PersistenceDataHandler.tscn" id="5_ho3qm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_giw6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hikd2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8dqgi"]
atlas = ExtResource("3_uyrg3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_v5xu1"]
resource_name = "Delete"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.15, 1.25, 1.3, 1.35, 1.4, 1.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.15, 1.25, 1.3, 1.35, 1.4, 1.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5g7n4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yrrk7"]
resource_name = "default"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.55, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0), Vector2(0, -3), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7w2p"]
_data = {
"Delete": SubResource("Animation_v5xu1"),
"RESET": SubResource("Animation_5g7n4"),
"default": SubResource("Animation_yrrk7")
}

[node name="ItemPickUp" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
motion_mode = 1
script = ExtResource("1_xit30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_giw6i")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hikd2")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0.0196078, 0.0196078, 0.0196078, 0.596078)
position = Vector2(0, 7)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_nbybi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_8dqgi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lm6wa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c7w2p")
}
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="One_Shoot_Item" parent="." instance=ExtResource("5_ho3qm")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
